# nixpkgs-mark-broken

./: .gitignore  default.nix  filter-broken-pkgs.py  filter-broken-pkgs.sh  flake.nix  list-broken-packages.py  mark-broken-v2.py  mark_broken_v2.py  migrate.py  nixpkgs-broken.nix  nixpkgs-broken.py  pyproject.toml  shell.nix  test_mark_broken.py
experiments/: aio.py  filter-html.py
experiments/rust/: Cargo.toml  flake.nix  shell.nix
experiments/rust/src/: main.rs
src/nixpkgs_broken/: broken.py  mark_broken_v2.py  nixpkgs-broken.py
